# echo-communication-v1

./: .gitignore  Cargo.toml  GUIDE.md  README.md
cli/: Cargo.toml
cli/src/: main.rs
controller/: Cargo.toml
controller/src/: config.rs  handler.rs  main.rs  session.rs  shared.rs
