[package]
name = "echo-communication"
version = "1.0.14"
edition = "2021"

[[bin]]
name = "echo-communication"
path = "src/main.rs"

[dependencies]
serde      = { version = "1", features = ["derive"] }
serde_json = "1"
uuid       = { version = "1", features = ["v4"] }
ctrlc      = { version = "3", features = ["termination"] }
